fix clear navbar header on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,11 @@ a:link, a:visited {
     border: none;
   }
   
+  .navbar-header {
+    background: #f8f8f8;
+    border-color: #e7e7e7;
+  }
+  
   .active a {
     background-color: transparent !important;
   }
